tests/ui/borrowck/borrowck-init-in-fru.rs
#[derive(Clone)]
struct Point {
    x: isize,
    y: isize,
}

fn main() {
    let mut origin: Point;
    origin = Point { x: 10, ..origin };
    //~^ ERROR E0381
    origin.clone();
}
